# zhejian-url

./: .env.example  .env.test  .gitignore  .golangci.yml  CLAUDE.md  Makefile  README.md  buf.gen.yaml  codecov.yml  docker-compose.chaos.yml  docker-compose.prod.yml  docker-compose.rabbitmq-cluster.yml  docker-compose.yml
.github/workflows/: chaos.yml  go.yml  load-test.yml  production.yml  rust.yml
config/rabbitmq/: rabbitmq.conf
docs/: ARCHITECTURE.md  BUILD_PHASES.md  Comparison.md  GETTING_STARTED.md
docs/findings/: 2026-03-19-phase-10b-redis-ring.md  2026-03-31-phase-10c-competing-consumers.md
docs/plans/: 2026-02-28-phase8-resilience-chaos.md  2026-03-03-scaling-strategy-design.md  2026-03-06-scaling-comparison-plan.md
docs/superpowers/plans/: 2026-04-01-rabbitmq-cluster-overlay.md
infrastructure/docker/postgres/: init.sql
infrastructure/nginx/: nginx.conf
migrations/: 001_init.sql.bak  002_seed_data.sql  Dockerfile  migrate-entrypoint.sh
migrations/schema/: 000001_init.down.sql  000001_init.up.sql  000002_analytics.down.sql  000002_analytics.up.sql
observability/prometheus/: alert-rules.yml  prometheus.dev.yml  prometheus.yml
proto/: ratelimit.proto
scripts/: chaos-test.sh  migrate.sh
services/analytics-worker/: Dockerfile  go.mod  go.sum
services/gateway/: Dockerfile  claude.md  go.mod  go.sum
services/rate-limiter/: Cargo.toml  Dockerfile  build.rs
services/rate-limiter/src/: main.rs  service.rs  token_bucket.lua  token_bucket.rs
tests/: analytics-load.js  baseline.js  endurance.js  hotkey.js  spike.js  throughput.js
(+48 files in other folders)
